add description why java 21 + tomcat 11 is faster